[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pymm"
description = "Open-source image-based workflow for CFD simulations in microsystems"
authors = [{ name = "David Landa-Marbán", email = "dmar@norceresearch.no" }]
maintainers = [{ name = "David Landa-Marbán", email = "dmar@norceresearch.no" }]
version = "v12"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "GPL-3.0"}
keywords = ["openfoam", "navier-stokes", "gmsh", "cfd", "microsystems"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
dependencies = [
    "mako",
    "porespy",
    "pypardiso"
]
requires-python = ">=3.8"

[project.scripts]
pymm = "pymm.core.pymm:main"

[project.urls]
Homepage = "https://cssr-tools.github.io/pymm"
Repository = "https://github.com/cssr-tools/pymm"

[tool.setuptools]
packages.find.where = ["src"]
platforms = ["all"]